fixing dark mode live stream page and video submit page

--- a/assets/sass/elements/_dark-mode.scss
+++ b/assets/sass/elements/_dark-mode.scss
@@ -721,6 +721,16 @@
     .single_video .row.desc {
         color: $grayText;
     }
+
+    .live_stream {
+        .wp-block-columns .wp-block-column {
+            background: $darkerGray;
+        }
+
+        .wcContainer.wcCrystalTheme .wcClassic {
+            background-color: $darkerGray;
+        }
+    }
 }
 
 .logged-in:not(.db-dark-mode-active) {
