--- a/assets/sass/elements/_live-stream.scss
+++ b/assets/sass/elements/_live-stream.scss
@@ -6,15 +6,21 @@
     }
 
     .columns_wrap {
-        
+        @include boxShadow;
     }
 
-    .gallery .epyt-video-wrapper, .epyt-video-wrapper > div {
+    .gallery .epyt-video-wrapper,
+    .epyt-video-wrapper > div {
         width: 100%;
     }
 
     .epyt-facade {
         width: 100%;
+
+        img.epyt-facade-poster {
+            border-top-left-radius: 6px;
+            border-bottom-left-radius: 6px;
+        }
     }
 
     .epyt-gallery-list {
@@ -69,31 +75,15 @@
     }
 
     .button_row {
-        margin-top: 40px;
-        text-align: right;
+        margin-top: 80px;
+
+        .button {
+            float: right;
+        }
     }
 }
 
-
-.chatbox{
-    width: 100%;
-    height: 350px;
-    overflow-y:scroll;
-    background: rgba(146, 121, 110, 0.26);
-    border-radius: 0px;
-    border: solid 1px #BDBDBD;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    margin: 0px !important;
-}
-.chatbox li{
-    clear: both;
-    text-decoration: none;
-    list-style-type: none;
-    margin: 20px 0px 0px 20px;
-}
-.actual_msg{
+.actual_msg {
     display: inline-block;
     margin-right: 20px;
     padding: 25px 34px;
@@ -104,26 +94,13 @@
     box-shadow: 0px 3px 3px rgba(172, 172, 172, 0.73);
     line-height: 1.4;
     word-wrap: break-word;
-    color: #1A1A1A;
+    color: #1a1a1a;
     background-color: rgba(0, 0, 0, 0.11);
 }
-.date{
+.date {
     font-size: 9px;
     float: left;
     margin-top: 10px;
-}
-
-.wcWindowTitle {
-    background-color: #f1f1f1 !important;
-    color: #f1f1f1 !important;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    -webkit-border-top-left-radius: 6px;
-    -webkit-border-top-right-radius: 6px;
-    -moz-border-radius-topleft: 6px;
-    -moz-border-radius-topright: 6px;
-    font-size: 0;
-    height: 5px  !important;
 }
 
 .live_stream .wp-block-columns {
@@ -180,6 +157,11 @@
                 width: 100%;
             }
 
+            iframe {
+                border-top-left-radius: 6px;
+                border-bottom-left-radius: 6px;
+            }
+
             p {
                 position: absolute;
                 color: $white;
@@ -197,6 +179,7 @@
 .wcContainer {
     width: 50% !important;
     height: 100% !important;
+    padding-right: 20px;
 
     @include media($tablet) {
         width: 100% !important;
@@ -218,17 +201,39 @@
         }
     }
 
-    &.wcCrystalTheme .wcChannel .wcChannelInput {
-        padding :0;
-        border-top: 1px solid $borderGray;
+    &.wcCrystalTheme {
+        .wcChannel .wcChannelInput {
+            padding: 0;
+            background-color: unset;
 
-        .wcInputs div.wcInput {
-            width: 100%;
-            margin-bottom: 10px;
+            .wcInputs div.wcInput {
+                width: 100%;
+                margin-bottom: 10px;
+                border: 1px solid $borderGray;
+
+                &:focus {
+                    border: 1px solid $borderGray !important;
+                }
+            }
+        }
+        .wcClassic {
+            background-color: $white;
+            box-shadow: unset;
+
+            .wcTitle {
+                background: $white;
+            }
         }
     }
 
-    .wcChannel .wcChannelData .wcMessages .wcMessage .wcRowBody .wcContent .wcReactionsButtons .wcReactionsButtonsList {
+    .wcChannel
+        .wcChannelData
+        .wcMessages
+        .wcMessage
+        .wcRowBody
+        .wcContent
+        .wcReactionsButtons
+        .wcReactionsButtonsList {
         width: 100%;
 
         .wcReactionButton {
@@ -246,9 +251,27 @@
             }
         }
     }
-    .wcChannel .wcChannelData .wcMessages .wcMessage .wcRowBody .wcContent .wcReactionsCounters .wcReactionCounter.wcReactionLike img {
+    .wcChannel
+        .wcChannelData
+        .wcMessages
+        .wcMessage
+        .wcRowBody
+        .wcContent
+        .wcReactionsCounters
+        .wcReactionCounter.wcReactionLike
+        img {
         height: 1.2rem;
         width: auto;
+    }
+
+    .wcTabs {
+        background-color: unset !important;
+        border-bottom: none !important;
+        gap: 2rem;
+
+        .wcTab {
+            background: $lightGray;
+        }
     }
 
     .wcMessages {
@@ -263,7 +286,7 @@
             }
 
             .wcMessageContent {
-                background-color: rgba(241,241,241,.7) !important;
+                background-color: rgba(241, 241, 241, 0.7) !important;
                 border-radius: 50px !important;
                 -webkit-border-radius: 50px !important;
                 -moz-border-radius: 50px !important;
@@ -276,7 +299,6 @@
     }
 
     .wcControls {
-        background: rgba(241,241,241,.7) !important;
         border-bottom-left-radius: 6px;
         border-bottom-right-radius: 6px;
         -webkit-border-bottom-left-radius: 6px;
@@ -296,7 +318,7 @@
         }
 
         span {
-            background: rgba(241,241,241,.7) !important;
+            background: rgba(241, 241, 241, 0.7) !important;
         }
     }
 
